--- a/TOUIJava/build.gradle
+++ b/TOUIJava/build.gradle
@@ -1,17 +1,54 @@
 repositories {
     jcenter()
+    mavenLocal()
 }
 
 
 apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+version = "1.0"
+
+group = 'org.toui'
 
 dependencies {
     compile ('com.fasterxml.jackson.core:jackson-core:2.8.+')
     compile ('com.fasterxml.jackson.core:jackson-databind:2.8.+')
     compile ('com.fasterxml.jackson.core:jackson-annotations:2.8.+')
 
+
     compile ('org.java-websocket:Java-WebSocket:1.3.0')
+}
+
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.1'
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            artifact javadocJar {
+                classifier "javadoc"
+            }
+
+            artifact sourceJar {
+                classifier "sources"
+            }
+        }
+    }
 }
