--- a/TOUIJava/build.gradle
+++ b/TOUIJava/build.gradle
@@ -15,12 +15,11 @@ version = "1.0"
 group = 'org.toui'
 
 dependencies {
-    compile ('com.fasterxml.jackson.core:jackson-core:2.8.+')
     compile ('com.fasterxml.jackson.core:jackson-databind:2.8.+')
-    compile ('com.fasterxml.jackson.core:jackson-annotations:2.8.+')
+//    compile ('com.fasterxml.jackson.core:jackson-core:2.8.+')
+//    compile ('com.fasterxml.jackson.core:jackson-annotations:2.8.+')
 
-
-    compile ('org.java-websocket:Java-WebSocket:1.3.0')
+    compile ('io.netty:netty-all:4.1.+')
 }
 
 
