--- a/java/build.gradle
+++ b/java/build.gradle
@@ -12,7 +12,7 @@ targetCompatibility = 1.8
 
 version = "1.0"
 
-group = 'org.toui'
+group = 'org.toi'
 
 dependencies {
 //    compile ('com.fasterxml.jackson.core:jackson-databind:2.8.+')
