--- a/TypeScript/package.json
+++ b/TypeScript/package.json
@@ -8,6 +8,10 @@
     "typescript": "tsc --project .",
     "test": "mocha --compilers ts:ts-node/register"
   },
+  "pre-commit": [
+    "tslint",
+    "test"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/i-n-g-o/TOI.git"
@@ -28,6 +32,7 @@
     "@types/mocha": "^2.2.41",
     "chai": "^4.0.2",
     "mocha": "^3.4.2",
+    "pre-commit": "^1.2.2",
     "ts-node": "^3.1.0",
     "tslint": "^5.4.3",
     "typescript": "^2.4.1"
